<resources>
    <string name="app_name">DemoChat</string>
    <string name="add_a_new_account">Add a new account?</string>
    <string name="display_name">Display Name</string>
    <string name="display_name2">Display Name</string>
    <string name="default_status">Hi there,I am using Lapit Chat App </string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="log_out">Log Out</string>
    <string name="login">LOGIN</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_lapit_n_chat_app">Welcome to Lapit   Chat App</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_requests_page">Welcome to Requests Page</string>

    <string name="change_status">CHANGE STATUS</string>
    <string name="change_image">CHANGE IMAGE</string>

    <string name="user_default_status">User default Status</string>


    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="todo">TODO</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="display_name3">Display Name</string>
    <string name="display_name4">Display Name</string>
    <string name="current_user_status">Current User Status</string>
    <string name="total_friends1">Total Friends</string>
    <string name="send_friend_request1">SEND FRIEND REQUEST</string>
    <string name="decline_friend_request1">DECLINE FRIEND REQUEST</string>
    <string name="todo1">TODO</string>

    <string name="enter_message">Enter Message...</string>

    <string name="last_seen">Last Seen</string>
    <string name="message_text1">Message Text</string>

    <string name="_00_001">00:00</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="message_text">Message Text</string>

    <string name="_00_00">00:00</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="open_profile">Open Profile</string>



</resources>
